# YarnCloth

./: .gitignore  CMakeLists.txt  README.md
Engine/Shaders/: CatmullRomSpline.tse.glsl  Default.vs.glsl  Fibers.fs.glsl  Fibers.glsl  Fibers.gs.glsl  Fibers.tsc.glsl  Fibers.tse.glsl  Lambert.fs.glsl  SelfShadow.fs.glsl  SelfShadowAbsorption.glsl  SelfShadowDensity.fs.glsl  SelfShadowDensity.glsl  (+1 more)
Engine/Source/Editor/: App.cpp  CMakeLists.txt  Common.cuh  Common.hpp  EditorLayer.cpp  EditorLayer.h  Scene.h  SolverGPU.cu  SolverGPU.cuh  SolverGPU.hpp
Engine/Source/Runtime/: CMakeLists.txt  Engine.h  GLCore.h  GLCoreUtils.h  glpch.h
Engine/Source/Runtime/Core/: Actor.cpp  Actor.h  Application.cpp  Application.h  Component.cpp  Component.h  Transform.h  Window.h
Engine/Source/Runtime/ImGui/: ImGuiLayer.h
Engine/Source/Runtime/Mesh/: Mesh.cpp  Mesh.h  SubMesh.cpp  SubMesh.h
Engine/Source/Runtime/Platform/OpenGL/: NativeOpenGLShader.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.h  OpenGLRenderingAPI.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.h  OpenGLVertexArray.h  OpenGLVertexBuffer.h  SPVOpenGLShader.cpp  SPVOpenGLShader.h
Engine/Source/Runtime/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Engine/Source/Runtime/Rendering/: GraphicsContext.h  IndexBuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  PostProcessing.h  RenderCommand.cpp  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.h  YarnSelfShadow.cpp  YarnSelfShadow.h
Engine/Source/Runtime/Rendering/Camera/: EditorCamera.cpp  EditorCamera.h
Engine/Source/Runtime/Rendering/Texture/: Framebuffer.cpp  Framebuffer.h  Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h
Engine/Source/Runtime/Resource/: AssetManager.h  BCCReader.h  ConfigManager.cpp  ConfigManager.h  PathResolver.h
Engine/Source/Runtime/Utils/: OpenGLDebug.h  Timer.cpp  Timer.h
(+7 files in other folders)
